# ecmwf-forecast

./: .editorconfig  .gitignore  CHANGELOG.md  README-template.md  README.md  docker_env  environment.yml  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml
ci/envs/: py310.yaml
docs/: Add Kerchunk Indices as Item Properties.ipynb  installation_and_basic_usage.ipynb  run_collection.ipynb  validate_item_properties_kerchunk_indices.ipynb
examples/: collection.json  item.json
scripts/: codespell  coverage  format  lint  stactools-version.py  test
src/stactools/ecmwf_forecast/: __init__.py  _kerchunk_helper_functions.py  commands.py  constant_kerchunk.json  constants.py  kerchunk_helper_functions.py  plots.py  range_codec.py  stac.py
tests/: blob_kerchunk_indices.json  test_commands.py  test_module.py  test_stac.py
