[metadata]
name = stactools-ecmwf-forecast
version = attr: stactools.ecmwf_forecast.__version__
description = "stactools package to generate STAC items for ECMWF forecast products."
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = taugspurger@microsoft.com
url = https://github.com/stactools-packages/ecmwf-forecast
project_urls =
    Documentation = https://stactools-ecmwf-forecast.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/ecmwf-forecast/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    ecmwf
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools
    xarray
    cfgrib
    fsspec

[options.packages.find]
where = src
