[metadata]
name = stactools-ecmwf-forecast
version = attr: stactools.ecmwf_forecast.__version__
description = "stactools package to generate STAC items for ECMWF forecast products."
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = taugspurger@microsoft.com
url = https://github.com/stactools-packages/ecmwf-forecast
project_urls =
    Documentation = https://stactools-ecmwf-forecast.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/ecmwf-forecast/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    ecmwf
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >3.10
install_requires =
    stactools >= 0.2.6
    xarray
    cfgrib
    fsspec
    numcodecs
    kerchunk

[options]
include_package_data = True

[options.package_data]
stactools-ecmwf-forecast = *.json

[options.packages.find]
where = src

[options.entry_points]
numcodecs.codecs = 
    range = stactools.ecmwf_forecast.range_codec:Range
